--- a/css/main.css
+++ b/css/main.css
@@ -165,6 +165,20 @@ p {
     background-image: url(../img/spotify-color.png);
 }
 
+ .header-main-sm-et {
+     width: 20px;
+     height: 20px;
+     background-image: url(../img/etsy.png);
+     background-repeat: no-repeat;
+     background-size: cover;
+
+ }
+
+ .header-main-sm-et:hover {
+    background-image: url(../img/etsy-color.png);
+ 
+}
+
 /* <600px, 601px, 768px, 992px, 1200px */
 
 /* LARGE TABLET VERSION */
