--- a/css/main.css
+++ b/css/main.css
@@ -125,6 +125,20 @@ p {
 
  }
 
+ .header-main-sm-bc {
+     width: 20px;
+     height: 20px;
+     background-image: url(../img/bandcamp.png);
+     background-repeat: no-repeat;
+     background-size: cover;
+
+ }
+
+ .header-main-sm-bc:hover {
+    background-image: url(../img/bandcamp-color.png);
+ 
+}
+
  .header-main-sm-yt {
      width: 20px;
      height: 20px;
